--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Konfirmasi Direct</title>
+    <title>Kuhyakuya YouTube</title>
     <link rel="icon" href="assets/icons/favicon.svg" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="canonical" href="" id="canonical-link" />
@@ -12,10 +12,9 @@
     <main class="page">
       <section class="card" role="status" aria-live="polite">
         <div class="card__lottie" id="loading-animation" aria-hidden="true"></div>
-        <h1>Konfirmasi sebelum melanjutkan</h1>
+        <h1>Terima Kasih telah ingin menggunjungi link kami</h1>
         <p>
-          Kamu akan diarahkan ke <span id="target-url-text"></span>. Pastikan kamu ingin membuka
-          tautan tersebut sebelum melanjutkan.
+          Kamu akan diarahkan ke <span id="target-url-text"></span>.
         </p>
         <div class="button-group">
           <a class="button" href="" rel="noopener noreferrer" id="target-url">
