Add multiple redirect links

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <section class="card" role="status" aria-live="polite">
         <div class="card__lottie" id="loading-animation" aria-hidden="true"></div>
         <h1>Terima Kasih telah ingin menggunjungi link kami</h1>
-        <p>
-          Kamu akan diarahkan ke <span id="target-url-text"></span>.
-        </p>
-        <div class="button-group">
-          <a class="button" href="" rel="noopener noreferrer" id="target-url">
-            Ya, lanjutkan
-          </a>
-          <a class="button button--ghost" href="https://kuhyakuya.com" rel="noopener noreferrer">
+        <p>Pilih salah satu link tujuan di bawah ini.</p>
+        <div class="button-group" id="target-url-list">
+          <a
+            class="button button--ghost"
+            href="https://kuhyakuya.com"
+            rel="noopener noreferrer"
+            id="cancel-link"
+          >
             Tidak, batalkan
           </a>
         </div>
