--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="googlebot" content="noindex, nofollow">
     <title>Kuhyakuya YouTube</title>
     <link rel="icon" href="assets/icons/favicon.svg" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="canonical" href="" id="canonical-link" />
   </head>
   <body>
     <main class="page">
