--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex, nofollow">
     <meta name="googlebot" content="noindex, nofollow">
-    <title>Kuhyakuya YouTube</title>
+    <title>KuhyaKuya YouTube</title>
     <link rel="icon" href="assets/icons/favicon.svg" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
